[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "kitchen_sync"
version = "0.1.0"
description = "ML-Agents project for Data Science"
dependencies = [
    "absl-py==2.3.1",
    "anyio==4.12.1",
    "attrs==25.4.0",
    "cattrs==1.5.0",
    "certifi==2026.1.4",
    "click==8.3.1",
    "cloudpickle==3.1.2",
    "colorama==0.4.6",
    "exceptiongroup==1.3.1",
    "filelock==3.20.3",
    "fsspec==2026.1.0",
    "grpcio",
    "gym==0.26.2",
    "gym-notices==0.1.0",
    "h11==0.16.0",
    "h5py==3.15.1",
    "hf-xet==1.2.0",
    "httpcore==1.0.9",
    "httpx==0.28.1",
    "huggingface_hub==1.3.2",
    "idna==3.11",
    "Jinja2==3.1.6",
    "Markdown==3.10",
    "MarkupSafe==3.0.3",
    "mlagents==1.1.0",
    "mlagents-envs==1.1.0",
    "mpmath==1.3.0",
    "networkx==3.4.2",
    "numpy==1.23.5",
    "onnx==1.15.0",
    "packaging==25.0",
    "PettingZoo==1.15.0",
    "pillow==12.1.0",
    "protobuf==3.20.3",
    "PyYAML==6.0.3",
    "shellingham==1.5.4",
    "six==1.17.0",
    "sympy==1.14.0",
    "tensorboard==2.20.0",
    "tensorboard-data-server==0.7.2",
    "torch==2.9.1",
    "tqdm==4.67.1",
    "typer-slim==0.21.1",
    "typing_extensions==4.15.0",
    "Werkzeug==3.1.5",
    "gymnasium==0.26.3",
    "pytest",
]

[tool.setuptools.packages.find]
where = ["."]